--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,7 @@
     line-height: 1.5;
     font-family: "Roboto", "Helvetica", "Arial", sans-serif;
     font-size: 1rem;
-    color: #222;
-    background-color: #fff;
+    color: #ffffff;
+    background-color: #ff0000;
   }
 }
